--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
         navigator.serviceWorker.register('pwabuilder-sw.js');
       }
     </script>
+    <style>
+      html * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
